--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Zingo PC</title>
+    <base href="./">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
